--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="html_C2">
-            <p> Cours, Devoirs et Compositions </p>
+            <p> Cours, Devoirs et  imed</p>
         </div>
         <div class="html_C3">
             <i class="bi bi-brightness-high-fill" id="toggleDark"></i>
