--- a/Physique 3as/PH_3AS_SBAC.html
+++ b/Physique 3as/PH_3AS_SBAC.html
@@ -75,75 +75,75 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacSE/Bac2023">
+                    <a href="BacSE/Bac2023.pdf>
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2023</p>                   
                     </a>
-                    <a href="BacSE/Bac2022">
+                    <a href="BacSE/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2022</p>                   
                     </a>
-                    <a href="BacSE/Bac2021">
+                    <a href="BacSE/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2021</p>                   
                     </a>
-                    <a href="BacSE/Bac2020">
+                    <a href="BacSE/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2020</p>                   
                     </a>
-                    <a href="BacSE/Bac2019">
+                    <a href="BacSE/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2019</p>                   
                     </a>
-                    <a href="BacSE/Bac2018">
+                    <a href="BacSE/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2018</p>                   
                     </a>
-                    <a href="BacSE/Bac2017">
+                    <a href="BacSE/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2017</p>                   
                     </a>
-                    <a href="BacSE/Bac2017(2)">
+                    <a href="BacSE/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2017</p>                   
                     </a>
-                    <a href="BacSE/Bac2016">
+                    <a href="BacSE/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2016</p>                   
                     </a>
-                    <a href="BacSE/Bac2016(2)">
+                    <a href="BacSE/Bac2016(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2016</p>                   
                     </a>
-                    <a href="BacSE/Bac2015">
+                    <a href="BacSE/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2015</p>                   
                     </a>
-                    <a href="BacSE/Bac2014">
+                    <a href="BacSE/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2014</p>                   
                     </a>
-                    <a href="BacSE/Bac2013">
+                    <a href="BacSE/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2013</p>                   
                     </a>
-                    <a href="BacSE/Bac2012">
+                    <a href="BacSE/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2012</p>                   
                     </a>
-                    <a href="BacSE/Bac2011">
+                    <a href="BacSE/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2011</p>                   
                     </a>
-                    <a href="BacSE/Bac2010">
+                    <a href="BacSE/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2010</p>                   
                     </a>
-                    <a href="BacSE/Bac2009">
+                    <a href="BacSE/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2009</p>                   
                     </a>
-                    <a href="BacSE/Bac2008">
+                    <a href="BacSE/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2008</p>                   
                     </a>
@@ -158,71 +158,71 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacMT-M/Bac2023">
+                    <a href="BacMT-M/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2023</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2022">
+                    <a href="BacMT-M/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2022</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2021">
+                    <a href="BacMT-M/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2021</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2020">
+                    <a href="BacMT-M/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2020</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2019">
+                    <a href="BacMT-M/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2019</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2018">
+                    <a href="BacMT-M/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2018</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2017">
+                    <a href="BacMT-M/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2017</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2017(2)">
+                    <a href="BacMT-M/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2017</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2016">
+                    <a href="BacMT-M/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2016</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2015">
+                    <a href="BacMT-M/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2015</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2014">
+                    <a href="BacMT-M/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2014</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2013">
+                    <a href="BacMT-M/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2013</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2012">
+                    <a href="BacMT-M/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2012</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2011">
+                    <a href="BacMT-M/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2011</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2010">
+                    <a href="BacMT-M/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2010</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2009">
+                    <a href="BacMT-M/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2009</p>                   
                     </a>
-                    <a href="BacMT-M/Bac2008">
+                    <a href="BacMT-M/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -MT-M- Bac2008</p>                   
                     </a>
