--- a/Physique 3as/PH_3AS_SBAC.html
+++ b/Physique 3as/PH_3AS_SBAC.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacSE/Bac2023.pdf>
+                    <a href="BacSE/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Physique -SE- Bac2023</p>                   
                     </a>
