--- a/Génie Electrique 3as/GE_3AS_SBAC.html
+++ b/Génie Electrique 3as/GE_3AS_SBAC.html
@@ -76,71 +76,71 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacMT/Bac2023">
+                    <a href="BacMT/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2023</p>                   
                     </a>
-                    <a href="BacMT/Bac2022">
+                    <a href="BacMT/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2022</p>                   
                     </a>
-                    <a href="BacMT/Bac2021">
+                    <a href="BacMT/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2021</p>                   
                     </a>
-                    <a href="BacMT/Bac2020">
+                    <a href="BacMT/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2020</p>                   
                     </a>
-                    <a href="BacMT/Bac2019">
+                    <a href="BacMT/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2019</p>                   
                     </a>
-                    <a href="BacMT/Bac2018">
+                    <a href="BacMT/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2018</p>                   
                     </a>
-                    <a href="BacMT/Bac2017">
+                    <a href="BacMT/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2017</p>                   
                     </a>
-                    <a href="BacMT/Bac2017(2)">
+                    <a href="BacMT/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2017</p>                   
                     </a>
-                    <a href="BacMT/Bac2016">
+                    <a href="BacMT/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2016</p>                   
                     </a>
-                    <a href="BacMT/Bac2015">
+                    <a href="BacMT/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2015</p>                   
                     </a>
-                    <a href="BacMT/Bac2014">
+                    <a href="BacMT/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2014</p>                   
                     </a>
-                    <a href="BacMT/Bac2013">
+                    <a href="BacMT/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2013</p>                   
                     </a>
-                    <a href="BacMT/Bac2012">
+                    <a href="BacMT/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2012</p>                   
                     </a>
-                    <a href="BacMT/Bac2011">
+                    <a href="BacMT/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2011</p>                   
                     </a>
-                    <a href="BacMT/Bac2010">
+                    <a href="BacMT/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2010</p>                   
                     </a>
-                    <a href="BacMT/Bac2009">
+                    <a href="BacMT/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2009</p>                   
                     </a>
-                    <a href="BacMT/Bac2008">
+                    <a href="BacMT/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Génie Electrique -MT- Bac2008</p>                   
                     </a>
