--- a/Mathématiques 3as/MT_3AS_SBAC.html
+++ b/Mathématiques 3as/MT_3AS_SBAC.html
@@ -75,75 +75,75 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacSE/Bac2023">
+                    <a href="BacSE/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2023</p>                   
                     </a>
-                    <a href="BacSE/Bac2022">
+                    <a href="BacSE/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2022</p>                   
                     </a>
-                    <a href="BacSE/Bac2021">
+                    <a href="BacSE/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2021</p>                   
                     </a>
-                    <a href="BacSE/Bac2020">
+                    <a href="BacSE/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2020</p>                   
                     </a>
-                    <a href="BacSE/Bac2019">
+                    <a href="BacSE/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2019</p>                   
                     </a>
-                    <a href="BacSE/Bac2018">
+                    <a href="BacSE/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2018</p>                   
                     </a>
-                    <a href="BacSE/Bac2017">
+                    <a href="BacSE/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2017</p>                   
                     </a>
-                    <a href="BacSE/Bac2017(2)">
+                    <a href="BacSE/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2017</p>                   
                     </a>
-                    <a href="BacSE/Bac2016">
+                    <a href="BacSE/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2016</p>                   
                     </a>
-                    <a href="BacSE/Bac2016(2)">
+                    <a href="BacSE/Bac2016(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2016</p>                   
                     </a>
-                    <a href="BacSE/Bac2015">
+                    <a href="BacSE/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2015</p>                   
                     </a>
-                    <a href="BacSE/Bac2014">
+                    <a href="BacSE/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2014</p>                   
                     </a>
-                    <a href="BacSE/Bac2013">
+                    <a href="BacSE/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2013</p>                   
                     </a>
-                    <a href="BacSE/Bac2012">
+                    <a href="BacSE/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2012</p>                   
                     </a>
-                    <a href="BacSE/Bac2011">
+                    <a href="BacSE/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2011</p>                   
                     </a>
-                    <a href="BacSE/Bac2010">
+                    <a href="BacSE/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2010</p>                   
                     </a>
-                    <a href="BacSE/Bac2009">
+                    <a href="BacSE/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2009</p>                   
                     </a>
-                    <a href="BacSE/Bac2008">
+                    <a href="BacSE/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -SE- Bac2008</p>                   
                     </a>
@@ -158,71 +158,71 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacMT/Bac2023">
+                    <a href="BacMT/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2023</p>                   
                     </a>
-                    <a href="BacMT/Bac2022">
+                    <a href="BacMT/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2022</p>                   
                     </a>
-                    <a href="BacMT/Bac2021">
+                    <a href="BacMT/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2021</p>                   
                     </a>
-                    <a href="BacMT/Bac2020">
+                    <a href="BacMT/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2020</p>                   
                     </a>
-                    <a href="BacMT/Bac2019">
+                    <a href="BacMT/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2019</p>                   
                     </a>
-                    <a href="BacMT/Bac2018">
+                    <a href="BacMT/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2018</p>                   
                     </a>
-                    <a href="BacMT/Bac2017">
+                    <a href="BacMT/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2017</p>                   
                     </a>
-                    <a href="BacMT/Bac2017(2)">
+                    <a href="BacMT/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2017</p>                   
                     </a>
-                    <a href="BacMT/Bac2016">
+                    <a href="BacMT/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2016</p>                   
                     </a>
-                    <a href="BacMT/Bac2015">
+                    <a href="BacMT/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2015</p>                   
                     </a>
-                    <a href="BacMT/Bac2014">
+                    <a href="BacMT/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2014</p>                   
                     </a>
-                    <a href="BacMT/Bac2013">
+                    <a href="BacMT/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2013</p>                   
                     </a>
-                    <a href="BacMT/Bac2012">
+                    <a href="BacMT/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2012</p>                   
                     </a>
-                    <a href="BacMT/Bac2011">
+                    <a href="BacMT/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2011</p>                   
                     </a>
-                    <a href="BacMT/Bac2010">
+                    <a href="BacMT/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2010</p>                   
                     </a>
-                    <a href="BacMT/Bac2009">
+                    <a href="BacMT/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2009</p>                   
                     </a>
-                    <a href="BacMT/Bac2008">
+                    <a href="BacMT/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -MT- Bac2008</p>                   
                     </a>
@@ -236,71 +236,71 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="BacM/Bac2023">
+                    <a href="BacM/Bac2023.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2023</p>                   
                     </a>
-                    <a href="BacM/Bac2022">
+                    <a href="BacM/Bac2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2022</p>                   
                     </a>
-                    <a href="BacM/Bac2021">
+                    <a href="BacM/Bac2021.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2021</p>                   
                     </a>
-                    <a href="BacM/Bac2020">
+                    <a href="BacM/Bac2020.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2020</p>                   
                     </a>
-                    <a href="BacM/Bac2019">
+                    <a href="BacM/Bac2019.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2019</p>                   
                     </a>
-                    <a href="BacM/Bac2018">
+                    <a href="BacM/Bac2018.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2018</p>                   
                     </a>
-                    <a href="BacM/Bac2017">
+                    <a href="BacM/Bac2017.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2017</p>                   
                     </a>
-                    <a href="BacM/Bac2017(2)">
+                    <a href="BacM/Bac2017(2).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2017</p>                   
                     </a>
-                    <a href="BacM/Bac2016">
+                    <a href="BacM/Bac2016.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2016</p>                   
                     </a>
-                    <a href="BacM/Bac2015">
+                    <a href="BacM/Bac2015.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2015</p>                   
                     </a>
-                    <a href="BacM/Bac2014">
+                    <a href="BacM/Bac2014.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2014</p>                   
                     </a>
-                    <a href="BacM/Bac2013">
+                    <a href="BacM/Bac2013.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2013</p>                   
                     </a>
-                    <a href="BacM/Bac2012">
+                    <a href="BacM/Bac2012.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2012</p>                   
                     </a>
-                    <a href="BacM/Bac2011">
+                    <a href="BacM/Bac2011.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2011</p>                   
                     </a>
-                    <a href="BacM/Bac2010">
+                    <a href="BacM/Bac2010.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2010</p>                   
                     </a>
-                    <a href="BacM/Bac2009">
+                    <a href="BacM/Bac2009.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2009</p>                   
                     </a>
-                    <a href="BacM/Bac2008">
+                    <a href="BacM/Bac2008.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Sujet Mathématiques -M- Bac2008</p>                   
                     </a>
