--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -82,6 +82,22 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch1C1.pdf">
+                        <p>ملخص درس مجموعةالتعريف</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1C2.pdf">
+                        <p>ملخص درس الدوال المرجعية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1C3.pdf">
+                        <p>ملخص درس الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1C4.pdf">
+                        <p>ملخص درس الدوال كثبرات الحدود</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -96,6 +112,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch2C1.pdf">
+                        <p>ملخص درس الاشتقاقية وتطبيقاتها</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -110,6 +130,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch3C1.pdf">
+                        <p>ملخص درس الاحتمالات</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -124,6 +148,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch4C1.pdf">
+                        <p>ملخص درس المرجح في المستوي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -138,6 +166,14 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch5C1.pdf">
+                        <p>ملخص درس النهايات</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch5C2.pdf">
+                        <p>ملخص درس مخطط دراسة دالة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -152,6 +188,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch6C1.pdf">
+                        <p>ملخص درس الزوايا الموجهة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -166,6 +206,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch7C1.pdf">
+                        <p>ملخص درس التحاكي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -180,6 +224,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch8C1.pdf">
+                        <p>ملخص درس الجداء السلمي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -194,6 +242,14 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch9C1.pdf">
+                        <p>ملخص درس المتتاليات العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch9C2.pdf">
+                        <p>ملخص حول المتتاليات العددية والهندسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -208,6 +264,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch10C1.pdf">
+                        <p>ملخص درس الهندسة الفضائية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
