--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1C1.pdf">
-                        <p>ملخص درس مجموعةالتعريف</p>                   
+                        <p>ملخص درس مجموعة التعريف</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
                     <a href="Cours/Ch1C2.pdf">
@@ -94,9 +94,17 @@
                         <p>ملخص درس الدوال العددية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
+                    <a href="Cours/Ch1C6.pdf">
+                        <p>ملخص حول الدوال</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                    </a>
                     <a href="Cours/Ch1C4.pdf">
                         <p>ملخص درس الدوال كثبرات الحدود</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1C5.pdf">
+                        <p>جذور وإشارة عبارات مختلفة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -115,6 +123,10 @@
                     <a href="Cours/Ch2C1.pdf">
                         <p>ملخص درس الاشتقاقية وتطبيقاتها</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2C2.pdf">
+                        <p>ملخص حول الإشتقاقية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -174,6 +186,14 @@
                         <p>ملخص درس مخطط دراسة دالة</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
+                    <a href="Cours/Ch5C3.pdf">
+                        <p>كيفية حساب النهايات لدوال كثير الحدود أو دالة ناطقة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                    </a>
+                    <a href="Cours/Ch5C4.pdf">
+                        <p>قوانين عامة حول الدوال</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -191,6 +211,10 @@
                     <a href="Cours/Ch6C1.pdf">
                         <p>ملخص درس الزوايا الموجهة</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch6C2.pdf">
+                        <p>مفكرة حول الدوال المثلثبة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
