--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -272,7 +272,7 @@
                     </a>
                     <a href="Cours/Ch9C2.pdf">
                         <p>ملخص حول المتتاليات العددية والهندسية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
