--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -124,6 +124,22 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <div>
+                        <p>مسائل شاملة مع الحل في الدوال </p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                    <a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
