--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -128,17 +128,17 @@
                         <p>مسائل شاملة مع الحل في الدوال </p>
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
-                    <a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    <a href="Cours/001.pdf">
+                        <p>الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
                     </a>
-                    <a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    <a href="Cours/002.pdf">
+                        <p>الدوال الأسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
                     </a>
-                    <a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    <a href="Cours/003.pdf">
+                        <p>الدوال اللوغارتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
