--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -123,11 +123,15 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                 </div>
-                <div class="pdf_Cour">
+                
+                <div class="text_Cour">
                     <div>
                         <p>مسائل شاملة مع الحل في الدوال </p>
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
+                </div>
+
+                <div class="pdf_Cour">
                     <a href="Cours/001.pdf">
                         <p>الدوال العددية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
