--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -126,23 +126,23 @@
                 
                 <div class="text_Cour">
                     <div>
-                        <p>مسائل شاملة مع الحل في الدوال </p>
+                        <p>مسائل شاملة مع الحل في الدوال:</p>
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
 
                 <div class="pdf_Cour">
                     <a href="Cours/001.pdf">
-                        <p>الدوال العددية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
+                        <p>الدوال العددية:</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/002.pdf">
                         <p>الدوال الأسية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/003.pdf">
                         <p>الدوال اللوغارتمية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #04ff9f;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
