--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -126,14 +126,14 @@
                 
                 <div class="text_Cour">
                     <div>
-                        <p>مسائل شاملة مع الحل في الدوال:</p>
+                        <p>مسائل شاملة مع الحل في الدوال|</p>
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
 
                 <div class="pdf_Cour">
                     <a href="Cours/001.pdf">
-                        <p>الدوال العددية:</p>                   
+                        <p>الدوال العددية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/002.pdf">
