--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -126,7 +126,7 @@
                 
                 <div class="text_Cour">
                     <div>
-                        <p>مسائل شاملة مع الحل في الدوال|</p>
+                        <p>مسائل شاملة مع الحل في الدوال</p>
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
