--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -84,27 +84,51 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1C1.pdf">
                         <p>ملخص درس مجموعة التعريف</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch1C2.pdf">
                         <p>ملخص درس الدوال المرجعية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>ملخصات في الدوال العددية</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
                     <a href="Cours/Ch1C3.pdf">
                         <p>ملخص درس الدوال العددية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch1C6.pdf">
                         <p>ملخص حول الدوال</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>الدوال كثيرات الحدود</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
                     <a href="Cours/Ch1C4.pdf">
                         <p>ملخص درس الدوال كثبرات الحدود</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch1C5.pdf">
-                        <p>جذور وإشارة عبارات مختلفة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <p>جذور وإشارات عبارات مختلفة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -122,11 +146,11 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2C1.pdf">
                         <p>ملخص درس الاشتقاقية وتطبيقاتها</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch2C2.pdf">
                         <p>ملخص حول الإشتقاقية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -144,7 +168,27 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch3C1.pdf">
                         <p>ملخص درس الاحتمالات</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>ملخصات في الإحتمالات</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch3C2.pdf">
+                        <p>ملخص في الإحتمالات 1</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
+                    </a>
+                    <a href="Cours/Ch3C3.pdf">
+                        <p>ملخص في الإحتمالات 2</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -162,7 +206,27 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch4C1.pdf">
                         <p>ملخص درس المرجح في المستوي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: ##ff0404a9;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>ملخصات في المرجح</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch4C2.pdf">
+                        <p>ملخص في المرجح</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
+                    </a>
+                    <a href="Cours/Ch4C3.pdf">
+                        <p>ملخص درس المرجح في المستوي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -180,19 +244,19 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch5C1.pdf">
                         <p>ملخص درس النهايات</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch5C2.pdf">
                         <p>ملخص درس مخطط دراسة دالة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch5C3.pdf">
                         <p>كيفية حساب النهايات لدوال كثير الحدود أو دالة ناطقة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch5C4.pdf">
                         <p>قوانين عامة حول الدوال</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -210,11 +274,11 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch6C1.pdf">
                         <p>ملخص درس الزوايا الموجهة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch6C2.pdf">
                         <p>مفكرة حول الدوال المثلثبة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -232,7 +296,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch7C1.pdf">
                         <p>ملخص درس التحاكي</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -250,7 +314,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch8C1.pdf">
                         <p>ملخص درس الجداء السلمي</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -268,11 +332,15 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch9C1.pdf">
                         <p>ملخص درس المتتاليات العددية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <a href="Cours/Ch9C2.pdf">
                         <p>ملخص حول المتتاليات العددية والهندسية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ffa704;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
+                    </a>
+                    <a href="Cours/Ch9C3.pdf">
+                        <p>كيفية حساب الحدود لمتتالية عددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
@@ -290,7 +358,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch10C1.pdf">
                         <p>ملخص درس الهندسة الفضائية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
