--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -206,7 +206,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch4C1.pdf">
                         <p>ملخص درس المرجح في المستوي</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: ##ff0404a9;"></i>
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
                         <p></p>                   
