--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -96,11 +96,50 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="">
+                        <p>كتاب الدوال الأسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>كتاب الدوال اللوغاريتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>-->
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>ملخصات ودروس و تمارين </p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <a href="">
+                    <p>ملخص+80 تمرين في الدوال الأسية</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+                <a href="">
+                    <p>ملخص+71 تمرين في الدوال اللوغاريتمية</p>                 
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+                <a href="">
+                    <p>ملخص الدالة الأسية</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+                <a href="">
+                    <p>ملخص الدالة اللوغاريتمية</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+                <a href="">
+                    <p>جدول يلخص الدالة الأسية واللوغاريتمية</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+                <a href="">
+                    <p>خريطة ذهنية للدالة الاسية واللوغاريتمية</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+
                 <hr>
 
                 <div class="text_Cour">
