--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -96,11 +96,11 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="Cours/Ch2/Cour1.pdf">
                         <p>كتاب الدوال الأسية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch2/Cour2.pdf">
                         <p>كتاب الدوال اللوغاريتمية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
@@ -115,27 +115,27 @@
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
-                <a href="">
+                <a href="Cours/Ch2/Cour3.pdf">
                     <p>ملخص+80 تمرين في الدوال الأسية</p>                   
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
-                <a href="">
+                <a href="Cours/Ch2/Cour4.pdf">
                     <p>ملخص+71 تمرين في الدوال اللوغاريتمية</p>                 
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
-                <a href="">
+                <a href="Cours/Ch2/Cour5.pdf">
                     <p>ملخص الدالة الأسية</p>                   
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
-                <a href="">
+                <a href="Cours/Ch2/Cour6.pdf">
                     <p>ملخص الدالة اللوغاريتمية</p>                   
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
-                <a href="">
+                <a href="Cours/Ch2/Cour7.pdf">
                     <p>جدول يلخص الدالة الأسية واللوغاريتمية</p>                   
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
-                <a href="">
+                <a href="Cours/Ch2/Cour8.pdf">
                     <p>خريطة ذهنية للدالة الاسية واللوغاريتمية</p>                   
                     <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                 </a>
