--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -82,6 +82,34 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="">
+                        <p>ملخص درس الاشتقاقية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>ملخص درس النهايات والاستمرارية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>قواعد الاشتقاق مرفق بالأمثلة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>ملخص حول الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>ملخص الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="">
+                        <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
