--- a/Mathématiques 2as/MT_2AS_C.html
+++ b/Mathématiques 2as/MT_2AS_C.html
@@ -166,28 +166,8 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Cours/Ch3C1.pdf">
+                    <a href="Cours/Ch3.pdf">
                         <p>ملخص درس الاحتمالات</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
-                    </a>
-                    <!--<a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>-->
-                </div>
-                <div class="text_Cour">
-                    <div>
-                        <p>ملخصات في الإحتمالات</p>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
-                    </div>
-                </div>
-                <div class="pdf_Cour">
-                    <a href="Cours/Ch3C2.pdf">
-                        <p>ملخص في الإحتمالات 1</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
-                    </a>
-                    <a href="Cours/Ch3C3.pdf">
-                        <p>ملخص في الإحتمالات 2</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
                     <!--<a href="">
@@ -204,27 +184,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Cours/Ch4C1.pdf">
-                        <p>ملخص درس المرجح في المستوي</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
-                    </a>
-                    <!--<a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>-->
-                </div>
-                <div class="text_Cour">
-                    <div>
-                        <p>ملخصات في المرجح</p>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
-                    </div>
-                </div>
-                <div class="pdf_Cour">
-                    <a href="Cours/Ch4C2.pdf">
-                        <p>ملخص في المرجح</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
-                    </a>
-                    <a href="Cours/Ch4C3.pdf">
+                    <a href="Cours/Ch4.pdf">
                         <p>ملخص درس المرجح في المستوي</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404a9;"></i>
                     </a>
